--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <!--jQuery-->
     <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!--CUSTOM JAVASCRIPT-->
     <script src="js/script.js"></script>
     <!--BOOSTRAP jQuery-->
