Adding CSS and images

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>My Project 6 Game</title>
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- BOOTSTRAP LINKS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
     <div class="text-center main-header">
-      <h1 class="display-3">Here is my Javascript turn-based Game!</h1>
-      <p class="lead main-header-text">Here is some text to fill in as a description as well as some gameplay instructions.</p>
+      <h1>Javascript turn-based Game!</h1>
+      <p class="main-header-text">Here is some text to fill in as a description as well as some gameplay instructions.</p>
     </div>
     <section class="grid text-center">
       <div class="grid-container">
