adding more styles and adjusting the weapons swap

--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
       <!--Gameboard here-->
       </div>
     </section>
+    <section class="player-stats">
+      <div class="infoBox">
+        <h3>Player 1</h3>
+        <ul>
+          <li>HP: <span id="player1_health"></span></li>
+          <li>Weapon: <span id="player1_weapon"></span></li>
+          <li>Damage Power: <span id="player1_damage"></span></li>
+        </ul>
+      </div>
+      <div class="infoBox">
+        <h3>Player 2</h3>
+        <ul>
+          <li>HP: <span id="player2_health"></span></li>
+          <li>Weapon: <span id="player2_weapon"></span></li>
+          <li>Damage Power: <span id="player2_damage"></span></li>
+        </ul>
+      </div>
+    </section>
+
 
     <!--jQuery-->
     <script
