changes made with Rita

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="text-center main-header">
       <h1>Javascript turn-based Game!</h1>
-      <p class="main-header-text">Here is some text to fill in as a description as well as some gameplay instructions.</p>
+      <p class="main-header-text">Pick up the weapons and try to win the battle!</p>
     </div>
     <section class="grid text-center">
       <div class="grid-container">
@@ -23,7 +23,11 @@
         <h3>Player 1</h3>
         <ul>
           <li>HP: <span id="player1_health"></span></li>
-          <li>Weapon: <span id="player1_weapon"></span></li>
+          <li>Weapon: <span id="player1_weapon"></span>
+            <div id="player1_weaponIMG" class="weapon-pic">
+
+            </div>
+          </li>
           <li>Damage Power: <span id="player1_damage"></span></li>
         </ul>
       </div>
@@ -31,7 +35,11 @@
         <h3>Player 2</h3>
         <ul>
           <li>HP: <span id="player2_health"></span></li>
-          <li>Weapon: <span id="player2_weapon"></span></li>
+          <li>Weapon: <span id="player2_weapon"></span>
+            <div id="player2_weaponIMG" class="weapon-pic">
+
+            </div>
+          </li>
           <li>Damage Power: <span id="player2_damage"></span></li>
         </ul>
       </div>
