Added box shadow to players + pencil image working in weapon square

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul>
           <li>HP: <span id="player1_health"></span></li>
           <li>Weapon: <span id="player1_weapon"></span>
-            <div id="player1_weaponImage" class="weapon-pic">
+            <div id="player1_weaponIMG" class="weapon-pic">
 
             </div>
           </li>
@@ -36,7 +36,7 @@
         <ul>
           <li>HP: <span id="player2_health"></span></li>
           <li>Weapon: <span id="player2_weapon"></span>
-            <div id="player2_weaponImage" class="weapon-pic">
+            <div id="player2_weaponIMG" class="weapon-pic">
 
             </div>
           </li>
