small design added to winner section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!--Winner Section-->
     <section id="winnerSection">
-      <h5 class="modal-title" id="exampleModalLongTitle"><span class="winnerModalName"></span> is the Winner!!</h5>
+      <h1 class="winnerSectionHeader"><span class="winnerModalName"></span> is the Winner!!</h1>
     </section>
 
     <!--Modal Bootstrap-->
