Weapon Background problem fixed
Problem of the weapon sidebar image backgrounds is fixed. Works now when the player goes on the weapon tile and the player's image remains.

Also deleted the other old script.js file and added slight style to the winner's box at the end.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!--Winner Section-->
     <section id="winnerSection">
-      <h1 class="winnerSectionHeader"><span class="winnerModalName"></span> is the Winner!!</h1>
+      <h1 class="winnerSectionHeader">Congratulations! <br /><span class="winnerModalName"></span><br />You are the Winner!!</h1>
     </section>
 
     <!--Modal Bootstrap-->
