--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
+    <div class="pyro">
+      <div class="before"></div>
+      <div class="after"></div>
+    </div>
     <div class="text-center main-header">
       <div class="main-header-text-container">
         <h1>Battle of Knights!</h1>
@@ -55,6 +59,8 @@
       <div class="winnerSection_PlayerImage"></div>
       <button type="button" id="refresh" class="btn btn-lg btn-outline-success">Play Again?</button>
     </section>
+
+
 
     <!--Modal Bootstrap-->
     <!--Alert Modals-->
