--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <h1>Battle of Knights!</h1>
         <p class="main-header-text">Pick up the weapons and try to win the battle against your opponent!
         <br /> <u>Rules:</u> You can't jump over barriers and you can only move vertically or horizontally!
+        <br />
+        You can attack your opponent by moving into a square next to them.
         </p>
       </div>
     </div>
